--- a/index.html
+++ b/index.html
@@ -1,31 +1,149 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My AI</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple AI Chat</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #ffffff;
+            font-family: Arial, sans-serif;
+            color: #333;
+        }
+
+        header {
+            text-align: center;
+            padding: 15px;
+            background: #f5f5f5;
+            border-bottom: 1px solid #ddd;
+        }
+
+        #chatBox {
+            width: 90%;
+            max-width: 700px;
+            margin: 20px auto;
+            padding: 15px;
+            border: 1px solid #ddd;
+            height: 430px;
+            overflow-y: auto;
+            background: #fafafa;
+        }
+
+        .msg {
+            padding: 12px;
+            margin-bottom: 12px;
+            border: 1px solid #ddd;
+            background: #fff;
+            border-radius: 6px;
+            white-space: pre-wrap;
+        }
+
+        .user {
+            border-left: 3px solid #4285f4;
+        }
+
+        .ai {
+            border-left: 3px solid #34a853;
+        }
+
+        pre {
+            background: #1e1e1e;
+            color: #fff;
+            padding: 10px;
+            border-radius: 6px;
+            overflow-x: auto;
+        }
+
+        .input-area {
+            width: 90%;
+            max-width: 700px;
+            margin: 10px auto;
+            display: flex;
+            gap: 8px;
+        }
+
+        input {
+            flex: 1;
+            padding: 12px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+            border-radius: 6px;
+        }
+
+        button {
+            padding: 12px 18px;
+            background: #4285f4;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 6px;
+        }
+
+        button:hover {
+            background: #3367d6;
+        }
+    </style>
 </head>
 <body>
 
-<h2>My AI Chat</h2>
+<header>
+    <h2>AI Chat (ChatGPT Style)</h2>
+</header>
 
-<input id="prompt" placeholder="Type message..." style="width:300px; padding:10px;">
-<button onclick="sendPrompt()">Send</button>
+<div id="chatBox"></div>
 
-<p id="reply"></p>
+<div class="input-area">
+    <input type="text" id="userInput" placeholder="Type your message...">
+    <button onclick="sendMessage()">Send</button>
+</div>
+
+<footer style="text-align:center; margin-top:10px; padding:8px;">
+    Simple AI © 2025
+</footer>
 
 <script>
-async function sendPrompt() {
-  const userText = document.getElementById("prompt").value;
+const input = document.getElementById("userInput");
+const chatBox = document.getElementById("chatBox");
 
-  const res = await fetch("https://myai-2-rtmk.onrender.com/generate", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ prompt: userText })
-  });
+function sendMessage() {
+    let text = input.value.trim();
+    if (text === "") return;
 
-  const data = await res.json();
+    addMessage(text, "user");
+    input.value = "";
 
-  document.getElementById("reply").innerText =
-    data.reply || "No response";
+    addMessage("AI is typing...", "ai");
+
+    fetch("https://myai-2-rtmk.onrender.com/generate", {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({ prompt: text })
+    })
+    .then(res => res.json())
+    .then(data => {
+        const aiMsgs = document.querySelectorAll(".ai");
+        aiMsgs[aiMsgs.length - 1].remove();
+
+        addMessage(formatMarkdown(data.reply), "ai");
+    })
+    .catch(err => console.error(err));
+}
+
+function addMessage(message, type) {
+    let div = document.createElement("div");
+    div.className = "msg " + type;
+    div.innerHTML = message;
+    chatBox.appendChild(div);
+    chatBox.scrollTop = chatBox.scrollHeight;
+}
+
+function formatMarkdown(text) {
+    return text
+        .replace(/```([^`]+)```/g, "<pre><code>$1</code></pre>")
+        .replace(/\n/g, "<br>");
 }
 </script>
 
